ChangeLog for herdstat

2005-06-04 Aaron Walker <ka0ttic@gentoo.org>

	* configure.ac: define SYSCONFDIR.
	* src/Makefile.am, src/fetcher.cc, src/fetcher.hh: Moved fetching code
	into it's own class, fetcher_T.
	* src/herdstat.cc, src/metacache.cc, src/querycache.cc,
	src/options.cc, src/rc.cc, src/rc.hh: Added configuration file support. 
	herdstat will first read /etc/herdstatrc if it exists and
	$HOME/.herdstatrc if it exists.  Options defined in the latter will
	override options defined in the former.
	* src/devaway.cc, src/herds_xml.cc, src/herds_xml_handler.cc: Updated
	to use fetcher_T.
	* lib/portage_version.cc, lib/string.cc, lib/string.hh: Moved strtoul
	and strtouint wrappers in with rest of string utility functions.
	* doc/herdstat.1.in: Added CONFIGURATION section.
	* doc/herdstatrc.example: Added example configuration file.

2005-06-03 Aaron Walker <ka0ttic@gentoo.org>

	* configure.ac: Updated version (1.1.1_rc5).
	* src/herdstat.cc, src/options.cc, src/action_fetch_handler.cc,
	src/action_fetch_handler.hh: Added action_fetch_handler_T so that
	--fetch works as expected and fetches anything needed for offline use.
	Currently fetches/parses herds.xml (parsing is required to fetch
	<maintainingproject> XML's) and fetches devaway.
	* src/metadata.cc, src/metadata.hh: moved metadata_T to it's own
	files.  Added a display() member function.
	* src/metadata_xml_handler.cc, src/metadata_xml_handler.hh,
	src/metadata_xml.cc, src/metadata_xml.hh: Updated to use metadata_T
	for holding the actual data.  the *_exists() functions now just call
	their respective metadata_T functions.  metadata_xml.cc is now empty
	and has been removed.
	* src/action_meta_handler.cc: Moved most of display() to
	metadata_T::display().  The only remaining code is for cases where the
	metadata doesn't exist.
	* lib/misc.cc: Increase timeout in wget command for slower
	connections.

2005-06-02 Aaron Walker <ka0ttic@gentoo.org>

	* configure.ac: Updated version (1.1.1_rc4).