@@ -1,14 +1,8 @@
-<!-- Automagically generated by the ToDo program on 06/04/05, 16:15 -->
+<!-- Automagically generated by the ToDo program on 2005-06-05 -->
 <todo version="0.1.18">
     <title>
         Todo list for herdstat
     </title>
-    <note priority="medium" time="1117880242">
-        Make highlights a map, and map words to colors?
-        <note priority="high" time="1117880652">
-            Treat highlights as a regex?
-        </note>
-    </note>
     <note priority="low" time="1117326066">
         have action_find_handler respect --with-{herd,maintainer} ?
     </note>
